Initial commit of bunq-js-api package

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
       "jsx"
     ]
   },
-  "name": "bunq-api",
-  "version": "1.0.5",
-  "description": "A wrapper for part of the Bunq API v1",
+  "name": "bunq-js-api",
+  "version": "1.0.0",
+  "description": "A wrapper for the Bunq API v1",
   "main": "./dist/index.js",
   "types": "./dist/bunq-api.d.ts",
   "dependencies": {
